- Move model to App\Models namespace and modified related class which used User model - Fixed Swagger Documentation, change parameter type from formData to body
